--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,7 @@ edition = "2018"
 [dev-dependencies]
 criterion = "0.3"
 criterion-cycles-per-byte = "0.1.1"
-
-[features]
-default = ["simple"]
-simple = []
+rand = "0.7.2"
 
 [profile.release]
 lto = true
@@ -22,4 +19,3 @@ lto = true
 [[bench]]
 name = "is_unicode"
 harness = false
-required-features = ["simple"]
